# similarity-matrix

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml
src/similarity_matrix/: main.py
src/similarity_matrix/lib/: cache.py  database.py  logging.py  math.py  matrix.py  matrix_chunk.py  model.py  pipeline.py  similarity.py  utils.py  windowing.py
src/similarity_matrix/pipelines/: example_pipeline.py
tests/reskill/: test_main.py
tests/reskill/lib/: test_cache.py  test_database.py  test_math.py  test_matrix.py  test_matrix_chunk.py  test_model.py  test_pipeline.py  test_similarity.py  test_utils.py  test_windowing.py
