[project]
name = "similarity-matrix"
version = "0.2.1"
authors = [
  { name="Federico Manzella", email="federico.manzella@unife.it" },
  { name="Pietro Casavecchia", email="pietro.casavecchia@edu.unife.it" },
]
description = "Compute similarity between two sets of texts"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "accelerate>=1.12,<2.0",
    "einops>=0.8,<0.9",
    "mysql-connector-python>=9.6,<10.0",
    "nltk>=3.9,<4.0",
    "python-decouple>=3.8,<4.0",
    "python-dotenv>=1.2,<2.0",
    "sentence-transformers>=5.2,<6.0",
    "numpy>=2.4,<3.0",
    "pymysql>=1.1,<2.0",
    "torch>=2.10,<3.0",
    "scipy>=1.17,<2.0",
    "transformers>=4.57,<5.0",
]

[project.urls]
Homepage = "https://github.com/ferdiu/similarity-matrix"
Issues = "https://github.com/ferdiu/similarity-matrix/issues"

[project.optional-dependencies]
dev = ["autopep8"]
test = [
  "flake8",
  "pytest",
  "pytest-cov"
]

[project.scripts]
similarity-matrix = "similarity_matrix.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = ["src/similarity_matrix/**", "tests/"]

[tool.hatch.build.targets.wheel]
packages = ["src/similarity_matrix"]

[tool.pytest.ini_options]
pythonpath = "src"
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]
